added file structure

--- a/chipman.abigail/index.html
+++ b/chipman.abigail/index.html
@@ -4,10 +4,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abby's WNM 608 landing page</title>
+    <link rel="stylesheet" href="lib/css/styleguide.css">
+    <link rel="stylesheet" href="css/storetheme.css">
+    <title>Great Scott! Abby's Emmet page</title>
 </head>
 <body>
-    <h2>WNM 608 - FALL 2021</h2>
-    <p>this is the landing page for my WNM 608 work</p>
+    <header class="navbar">
+        <div class="container display-flex">
+            <div class="flex-none">
+                <h1>Great Scott!</h1>
+            </div>
+            <div class="flex-stretch"></div>
+            <nav class="flex-none nav">
+                <ul class="container display-flex">
+                    <li><a href="#article1">Link 1</a></li>
+                    <li><a href="#article2">Link 2</a></li>
+                    <li><a href="#article3">Link 3</a></li>
+                    <li><a href="#article4">Link 4</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+   
+
+    <div class="container">
+        <article id="article1" class="article card soft">
+            <div class="display-flex flex-align-center">
+                <div class="flex-stretch">
+                    <h2>Article 1</h2>
+                </div>
+                <div class="flex-none">
+                    <small>5:20 am</small>
+                </div>
+            </div>
+            <div class="article-body">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ex veniam fugit quo in esse, illo quam soluta obcaecati modi voluptatem, est facere excepturi repellat molestiae. Molestiae officia beatae eius quisquam sapiente consequatur blanditiis dignissimos. Minima accusamus laboriosam nam exercitationem.</p>
+                <p>Eos corporis ut vitae repellat ducimus amet vero optio, commodi sed minus blanditiis sapiente consectetur ad, hic laborum laudantium, earum eius id. Ad iste laborum unde rem, praesentium, quod id facilis assumenda beatae illo, distinctio ducimus eligendi aliquam blanditiis nemo.</p>
+                <p>Eius expedita ad mollitia repellendus dolorem fugiat deleniti architecto nostrum tenetur voluptatum, libero omnis minima, dolorum dolore non. Impedit omnis sit voluptates accusamus officia deleniti odio rerum exercitationem consectetur saepe et aliquid similique velit, architecto dolor, itaque at non reiciendis.</p>
+            </div>
+        </article>
+        <article id="article2" class="article card hard">
+            <h2>Article 2</h2>
+            <div class="article-body">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam inventore iusto commodi sapiente, veritatis incidunt a animi blanditiis saepe dolor error tempore architecto harum voluptates modi perferendis nulla reiciendis consectetur corporis, adipisci voluptatum qui nemo? Illum blanditiis quod iusto.</p>
+                <p>Optio illum ducimus quia delectus fuga vero mollitia, accusamus quibusdam inventore, nam officia modi aliquam eveniet autem perspiciatis voluptas corrupti quos at rem accusantium sed aut incidunt sunt. Dolorum ipsa recusandae provident eius sequi accusamus dolore corrupti maiores temporibus nulla!</p>
+                <p>Iure eum sequi consequuntur, perspiciatis porro eligendi, minima earum, aliquam tempore excepturi voluptatum sit perferendis ea eos cumque beatae consectetur maxime similique nostrum non amet. Reprehenderit ipsa unde, doloribus perferendis omnis dicta, voluptate exercitationem sint quis nesciunt, illo praesentium ratione?</p>
+            </div>
+        </article>
+        </div>
+        <div class="view-window" style="background-image:url(lib/img/glitter-background.jpg);">
+
+        </div>
+        <div class="container">
+        <article id="article3" class="article">
+            <h2>Article 3</h2>
+            <div class="article-body">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel, deserunt dolorum eius minima dolor reiciendis maiores id ipsa enim distinctio sit. Ex fugiat ipsa ea odit illo suscipit, beatae voluptatum unde dolor tempora incidunt sed magni ratione, numquam, corrupti nam.</p>
+                <p>Repellendus earum cupiditate quaerat? Assumenda ut asperiores molestiae unde molestias est eaque earum dolore officia. Perspiciatis natus harum reprehenderit eveniet veritatis iure mollitia impedit? Enim facere, pariatur expedita corrupti qui aperiam dolorem error sint earum libero dolorum quas laboriosam est.</p>
+                <p>Libero ex provident quo quam, reiciendis laboriosam voluptatum nihil doloremque praesentium porro quae debitis dolorum dolore soluta magnam. Debitis tenetur quisquam explicabo, quaerat eos obcaecati corporis quia ipsa illum, ad earum sit, veniam voluptas expedita minus eaque voluptate. Explicabo, delectus!</p>
+            </div>
+        </article>
+        <article id="article4" class="article">
+            <h2>Article 4</h2>
+            <div class="article-body">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem reprehenderit tenetur nisi. Fuga pariatur rerum optio! Sed accusantium, consectetur saepe suscipit voluptatum esse qui culpa aliquam perspiciatis nisi harum magni voluptates. Consequuntur hic, expedita quae sequi similique magnam rem maxime.</p>
+                <p>Necessitatibus blanditiis praesentium provident minima natus veniam, officiis, cumque eius fuga iure architecto facere consequatur temporibus non. Accusantium ullam sequi consectetur ipsa ipsum temporibus accusamus nulla quaerat unde? Velit harum optio facilis quaerat est ab, officiis dolorum aperiam nostrum eveniet!</p>
+                <p>Rem, obcaecati aperiam! Voluptas, quisquam. Voluptatibus consequuntur cum quam incidunt laudantium nam nobis ipsam illum aliquam perspiciatis porro corporis consectetur, ad officiis dolores. Earum qui, necessitatibus ad aliquid accusantium nihil, repudiandae repellendus temporibus eaque eum corrupti culpa, incidunt illum rerum.</p>
+            </div>
+        </article>
+    </div>
 </body>
 </html>
