--- a/aaron.washington/index.html
+++ b/aaron.washington/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Aaron Joseph Music</title>
+    <title>AWesome Stuff</title>
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+    </style> 
+    <link rel="stylesheet" href="lib/css/styleguide.css">
 </head>
 <body>
     
@@ -16,11 +21,11 @@
 
 <!-- nav.nav>ul>li*4>a[href=#article$]>{Link$} -->
 <nav class="nav">
-    <ul>
-        <li><a href="#article1">Link1</a></li>
-        <li><a href="#article2">Link2</a></li>
-        <li><a href="#article3">Link3</a></li>
-        <li><a href="#article4">Link4</a></li>
+    <ul class="container display-flex">
+        <li class="flex-stretch"><a href="#article1">Link1</a></li>
+        <li class="flex-stretch"><a href="#article2">Link2</a></li>
+        <li class="flex-stretch"><a href="#article3">Link3</a></li>
+        <li class="flex-stretch"><a href="#article4">Link4</a></li>
     </ul>
 </nav>
 
