--- a/aaron.washington/index.html
+++ b/aaron.washington/index.html
@@ -29,10 +29,10 @@
     <div class="flex-stretch"></div>
     <nav class="flex-none nav">
         <ul class="display-flex">
-            <li class="flex-stretch"><a href="#article1">Link1</a></li>
-            <li class="flex-stretch"><a href="#article2">Link2</a></li>
-            <li class="flex-stretch"><a href="#article3">Link3</a></li>
-            <li class="flex-stretch"><a href="#article4">Link4</a></li>
+            <li><a href="#">New Stuff</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Login</a></li>
         </ul>
     </nav>
 </header>
