--- a/aaron.washington/index.html
+++ b/aaron.washington/index.html
@@ -39,6 +39,12 @@
 
 <!-- nav.nav>ul>li*4>a[href=#article$]>{Link$} -->
 
+<div class="hero">
+    <div class="container">
+
+    </div>
+</div>
+
 
 <!-- .container>article#article$.article*4>h2{Article $}+div.article-body>p*3>lorem40 -->
 <div class="container">
