--- a/aaron.washington/index.html
+++ b/aaron.washington/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="flex-none">
         <a href="#">
-            <h2>esome Stuff</h2>
+            <h5>esome Stuff</h5>
         </a>
     </div>
     <div class="flex-stretch"></div>
@@ -40,8 +40,12 @@
 <!-- nav.nav>ul>li*4>a[href=#article$]>{Link$} -->
 
 <div class="hero">
-    <div class="container">
-
+    <div class="container display-flex">
+        <div class="hero-text flex-none">
+            <h4>New Fall 2021 Series</h4>
+            <p>Check out this season&apos;s featured designs</p>
+            <button>Shop Now</button>
+        </div>
     </div>
 </div>
 
