--- a/aaron.washington/index.html
+++ b/aaron.washington/index.html
@@ -38,15 +38,21 @@
 </header>
 
 <!-- nav.nav>ul>li*4>a[href=#article$]>{Link$} -->
-
 <div class="hero">
-    <div class="container display-flex">
-        <div class="hero-text flex-none">
-            <h4>New Fall 2021 Series</h4>
-            <p>Check out this season&apos;s featured designs</p>
-            <button>Shop Now</button>
+    <div class="container display-flex flex-align-center">
+        <div class="flex-none hero-text">
+            <h2>IT&apos;S HERE</h2>
+            <h3>The Fall 2021 Series</h3>
+            <h5>Check out this season&apos;s featured designs</h5>
+            <button class="light">Shop Now</button>
         </div>
+        <div class="flex-stretch"></div>
     </div>
+</div>
+
+<!-- *** SECTION 1 *** -->
+<div class="grid-buttons">
+
 </div>
 
 
