--- a/aaron.washington/index.html
+++ b/aaron.washington/index.html
@@ -38,11 +38,11 @@
 </header>
 
 <!-- nav.nav>ul>li*4>a[href=#article$]>{Link$} -->
-<div class="hero">
-    <div class="container display-flex flex-align-center">
-        <div class="flex-none hero-text">
+<div class="hero hero-landing display-flex flex-align-center">
+    <div class="container flex-stretch">
+        <div class="hero-text">
             <h2>IT&apos;S HERE</h2>
-            <h3>The Fall 2021 Series</h3>
+            <h4>The Fall 2021 Series</h4>
             <h5>Check out this season&apos;s featured designs</h5>
             <button class="light">Shop Now</button>
         </div>
@@ -51,8 +51,35 @@
 </div>
 
 <!-- *** SECTION 1 *** -->
-<div class="grid-buttons">
-
+<div class="grid-buttons display-flex">
+    <div class="card flex-stretch">
+        <a href="#"> 
+            <div class="card-img card-bg-1 display-flex flex-align-center">
+                <h4 class="flex-none">SHOP MEN&apos;S</h4>
+            </div>
+        </a>
+    </div>
+    <div class="card flex-stretch">
+        <a href="#"> 
+            <div class="card-img card-bg-2 display-flex flex-align-center">
+                <h4 class="flex-none">SHOP WOMEN&apos;S</h4>
+            </div>
+        </a>
+    </div>
+    <div class="card flex-stretch">
+        <a href="#"> 
+            <div class="card-img card-bg-3 display-flex flex-align-center">
+                <h4 class="flex-none">SHOP KIDS</h4>
+            </div>
+        </a>
+    </div>
+    <div class="card flex-stretch">
+        <a href="#"> 
+            <div class="card-img card-bg-4 display-flex flex-align-center">
+                <h4 class="flex-none">SHOP ACCESSORIES</h4>
+            </div>
+        </a>
+    </div>
 </div>
 
 
