--- a/aaron.washington/index.html
+++ b/aaron.washington/index.html
@@ -50,73 +50,62 @@
     </div>
 </div>
 
-<!-- *** SECTION 1 *** -->
-<div class="grid-buttons display-flex">
-    <div class="card flex-stretch">
+<!-- *** SHOP BY CATEGORY *** -->
+<div class="display-flex">
+    <div class="card flex-stretch flex-basis-none">
         <a href="#"> 
             <div class="card-img card-bg-1 display-flex flex-align-center">
-                <h4 class="flex-none">SHOP MEN&apos;S</h4>
+                <h5 class="flex-stretch">SHOP MEN&apos;S</h5>
             </div>
         </a>
     </div>
-    <div class="card flex-stretch">
+    <div class="card flex-stretch flex-basis-none">
         <a href="#"> 
             <div class="card-img card-bg-2 display-flex flex-align-center">
-                <h4 class="flex-none">SHOP WOMEN&apos;S</h4>
+                <h5 class="flex-stretch">SHOP WOMEN&apos;S</h5>
             </div>
         </a>
     </div>
-    <div class="card flex-stretch">
+    <div class="card flex-stretch flex-basis-none">
         <a href="#"> 
             <div class="card-img card-bg-3 display-flex flex-align-center">
-                <h4 class="flex-none">SHOP KIDS</h4>
+                <h5 class="flex-stretch">SHOP KIDS</h5>
             </div>
         </a>
     </div>
-    <div class="card flex-stretch">
+    <div class="card flex-stretch flex-basis-none">
         <a href="#"> 
             <div class="card-img card-bg-4 display-flex flex-align-center">
-                <h4 class="flex-none">SHOP ACCESSORIES</h4>
+                <h5 class="flex-stretch">SHOP TRENDS</h5>
             </div>
         </a>
     </div>
 </div>
 
 
-<!-- .container>article#article$.article*4>h2{Article $}+div.article-body>p*3>lorem40 -->
-<div class="container">
-    <article id="article1" class="article">
-        <h2>Article 1</h2>
-        <div class="article-body">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum magnam quas cum, illo laboriosam ratione at quaerat accusantium, eveniet quo distinctio nisi beatae doloremque culpa quasi ea nam corporis eaque, exercitationem voluptatum vitae doloribus modi. Similique fuga esse nihil aliquid.</p>
-            <p>Ex velit earum, esse enim suscipit placeat fugiat laborum. Placeat aliquid pariatur aliquam, asperiores ex facere amet consequatur modi, libero, accusamus ratione? Praesentium, hic dolore quas perspiciatis placeat atque, dignissimos perferendis ut voluptates nemo id sit saepe natus, rerum blanditiis.</p>
-            <p>Eligendi maiores ipsa est dolores cum, facere, voluptates nihil in tempore nemo ullam distinctio. Non aspernatur tempore mollitia placeat, enim deserunt possimus repudiandae magni accusantium quae, eos corporis eaque minima neque commodi at sequi nobis. Veniam, laborum minus. Et, itaque?</p>
+<!-- *** ABOUT COMPANY *** -->
+<div class="container about-us">
+    <div class="display-flex">
+        <div class="flex-stretch about-text">
+            <h3>Why We&apos;re AWesome...</h3>
+            <p><strong>AWesome Stuff</strong> started as a single t-shirt designer in his garage and has now become one of the top t-shirt retailers of strictly original designs and products.
+                Despite a struggling economy, a worldwide pandemic, and a lack of catered lunches, <strong>AWesome Stuff</strong> is maintaining exponential growth and has only increased profits tenfold. </p>
         </div>
-    </article>
-    <article id="article2" class="article">
-        <h2>Article 2</h2>
-        <div class="article-body">
-            <p>Perferendis similique blanditiis voluptatem ipsum vitae. Illum soluta voluptatem sed expedita debitis possimus quas repudiandae unde vel maxime inventore voluptatum, maiores non! Velit veritatis beatae soluta ipsam alias nostrum temporibus, assumenda numquam eveniet, aut corrupti tenetur porro quod ut esse.</p>
-            <p>Adipisci doloribus voluptatibus iusto, officiis quos asperiores totam et ipsum magni excepturi! Assumenda officia minima a hic maxime dolore repellendus consequuntur aperiam cumque eligendi dolorem veritatis iure quae accusantium voluptatum quasi velit voluptatibus praesentium quos autem, cupiditate quas rerum! Magni.</p>
-            <p>Totam cumque tempora maiores vero tenetur alias reiciendis fuga, corporis consectetur optio nostrum sunt hic, excepturi dolor atque harum cupiditate odio labore veniam temporibus ducimus neque! Odio aspernatur, totam natus eum in saepe fugit quaerat similique. Vitae accusantium labore natus!</p>
+    </div>
+    <div class="display-flex">
+        <div class="flex-stretch flex-basis-none about-text">
+            <h4>Great Pay.</h4>
+            <p>We have more than competitive wages, we seek to provide the higher income levels for all of our employees, despite where they live.</p>
         </div>
-    </article>
-    <article id="article3" class="article">
-        <h2>Article 3</h2>
-        <div class="article-body">
-            <p>Ab delectus, aperiam tempora quaerat facilis facere saepe aspernatur, voluptatem eveniet possimus neque adipisci fugiat, expedita odio maxime cum nam sit. Quis eligendi recusandae repellendus corporis beatae quod veniam culpa rem, voluptatem alias accusantium vel, magnam illum perspiciatis. Eum, explicabo?</p>
-            <p>Labore saepe tempore facilis necessitatibus ab temporibus, veniam ad aspernatur adipisci corporis nobis. Repudiandae, impedit sunt libero nesciunt cupiditate eius laborum autem quas cum ullam beatae ad repellat reprehenderit deleniti distinctio necessitatibus ab deserunt, saepe dicta! Aliquam veniam commodi culpa?</p>
-            <p>Facilis eum voluptate minus totam perspiciatis sequi qui odit accusantium, a expedita in sint esse asperiores non voluptas quibusdam laudantium nihil nemo rem aliquid, nostrum ad! Quidem quia odio voluptates dolores debitis blanditiis corporis pariatur soluta, magnam accusantium iure. Ut!</p>
+        <div class="flex-stretch flex-basis-none about-text">
+            <h4>Great Benefits.</h4>
+            <p>401K matching at 6&percnt;.<br />90&percnt; paid Healthcare.<br />3 weeks PTO Day 1.<br />Tuition Reimbursement.<br />You name it, we provide it.</p>
         </div>
-    </article>
-    <article id="article4" class="article">
-        <h2>Article 4</h2>
-        <div class="article-body">
-            <p>Praesentium molestiae debitis placeat alias nisi. Neque perferendis odit similique eius dolorum labore quod itaque recusandae molestias est explicabo, beatae consectetur, repudiandae, veritatis illo molestiae vitae tempore quo quam incidunt. Rem, perferendis. Officia aliquam placeat soluta enim hic recusandae distinctio?</p>
-            <p>Exercitationem unde amet ipsam ut repellat sint sed porro perferendis laborum? Neque hic iste dolore vitae earum. Odit possimus, nisi nostrum voluptatum aperiam omnis architecto unde maiores necessitatibus amet corporis alias ducimus quaerat. Neque labore impedit, alias quisquam molestias recusandae.</p>
-            <p>Beatae nobis in unde necessitatibus vel. Maxime suscipit aperiam, praesentium quod odit dignissimos blanditiis facere, nisi veritatis officiis voluptatem dolores quaerat placeat magni eos culpa, accusamus iusto earum amet laudantium! Nihil, blanditiis nostrum. Provident, neque fuga. Quos neque beatae quam?</p>
+        <div class="flex-stretch flex-basis-none about-text">
+            <h4>Even Better People.</h4>
+            <p>Without a great work culture, you can't have success. We are VERY particular about maintaining a safe and comfortable workplace that allows you to be the best you and work with people who are also at their best.</p>
         </div>
-    </article>
+    </div>
 </div>
 
 </body>
