--- a/aaron.washington/index.html
+++ b/aaron.washington/index.html
@@ -29,7 +29,7 @@
     <div class="flex-stretch"></div>
     <nav class="flex-none nav">
         <ul class="display-flex">
-            <li><a href="#">New Stuff</a></li>
+            <li><a href="#">Featured</a></li>
             <li><a href="#">Products</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Login</a></li>
@@ -51,7 +51,7 @@
 </div>
 
 <!-- *** SHOP BY CATEGORY *** -->
-<div class="display-flex">
+<div class="card-row display-flex">
     <div class="card flex-stretch flex-basis-none">
         <a href="#"> 
             <div class="card-img card-bg-1 display-flex flex-align-center">
@@ -84,29 +84,48 @@
 
 
 <!-- *** ABOUT COMPANY *** -->
-<div class="container about-us">
-    <div class="display-flex">
-        <div class="flex-stretch about-text">
-            <h3>Why We&apos;re AWesome...</h3>
-            <p><strong>AWesome Stuff</strong> started as a single t-shirt designer in his garage and has now become one of the top t-shirt retailers of strictly original designs and products.
-                Despite a struggling economy, a worldwide pandemic, and a lack of catered lunches, <strong>AWesome Stuff</strong> is maintaining exponential growth and has only increased profits tenfold. </p>
+<section class="gray-bg">
+    <div class="container about-us">
+        <div class="display-flex">
+            <div class="flex-stretch about-text">
+                <h3>Why We&apos;re AWesome...</h3>
+                <p><strong>AWesome Stuff</strong> started as a single t-shirt designer in his garage and has now become one of the top t-shirt retailers of strictly original designs and products.
+                    Despite a struggling economy, a worldwide pandemic, and a lack of catered lunches, <strong>AWesome Stuff</strong> is maintaining exponential growth and has only increased profits tenfold. </p>
+            </div>
+        </div>
+        <br />
+        <div class="display-flex">
+            <div class="flex-stretch flex-basis-none about-text">
+                <h4>Great Pay.</h4>
+                <p>We have more than competitive wages, we seek to provide the higher income levels for all of our employees, despite where they live.</p>
+            </div>
+            <div class="flex-stretch flex-basis-none about-text">
+                <h4>Greater Benefits.</h4>
+                <p>401K matching at 6&percnt;.<br />90&percnt; paid Healthcare.<br />3 weeks PTO Day 1.<br />Tuition Reimbursement.<br />You name it, we provide it.</p>
+            </div>
+            <div class="flex-stretch flex-basis-none about-text">
+                <h4>Even Greater People.</h4>
+                <p>Without a great work culture, you can't have success. We are VERY particular about maintaining a safe and comfortable workplace that allows you to be the best you and work with people who are also at their best.</p>
+            </div>
         </div>
     </div>
-    <div class="display-flex">
-        <div class="flex-stretch flex-basis-none about-text">
-            <h4>Great Pay.</h4>
-            <p>We have more than competitive wages, we seek to provide the higher income levels for all of our employees, despite where they live.</p>
-        </div>
-        <div class="flex-stretch flex-basis-none about-text">
-            <h4>Great Benefits.</h4>
-            <p>401K matching at 6&percnt;.<br />90&percnt; paid Healthcare.<br />3 weeks PTO Day 1.<br />Tuition Reimbursement.<br />You name it, we provide it.</p>
-        </div>
-        <div class="flex-stretch flex-basis-none about-text">
-            <h4>Even Better People.</h4>
-            <p>Without a great work culture, you can't have success. We are VERY particular about maintaining a safe and comfortable workplace that allows you to be the best you and work with people who are also at their best.</p>
-        </div>
+</section>
+
+
+<!-- *** NEWSLETTER *** -->
+<div class="news-row display-flex flex-align-center">
+    <div class="flex-stretch news-img"></div>
+    <div class="flex-stretch news-text">
+        <h3>Want the Latest Updates?</h3>
+        <p>Subscribe to our monthly newsletter so you can hear about the latest in AWesome trends.</p>
+        <button class="light">Keep Me Posted!</button>
     </div>
 </div>
+
+
+<footer>
+
+</footer>
 
 </body>
 </html>
