--- a/aaron.washington/index.html
+++ b/aaron.washington/index.html
@@ -42,7 +42,7 @@
     <div class="container flex-stretch">
         <div class="hero-text">
             <h2>IT&apos;S HERE</h2>
-            <h4>The Fall 2021 Series</h4>
+            <h4>Fall 2021 Collection</h4>
             <h5>Check out this season&apos;s featured designs</h5>
             <button class="light">Shop Now</button>
         </div>
