--- a/aaron.washington/index.html
+++ b/aaron.washington/index.html
@@ -43,7 +43,7 @@
         <div class="hero-text">
             <h2>IT&apos;S HERE</h2>
             <h4>Fall 2021 Collection</h4>
-            <h5>Check out this season&apos;s featured designs</h5>
+            <p>Check out this season&apos;s featured designs.</p>
             <button class="light">Shop Now</button>
         </div>
         <div class="flex-stretch"></div>
@@ -83,6 +83,19 @@
 </div>
 
 
+<!-- *** SPECIAL DISCOUNT *** -->
+<div class="discount-row display-flex flex-align-center">
+    <div class="flex-stretch discount-offer">
+        <h5>This Month Only</h5>
+        <h1>25&percnt;<br />OFF</h1>
+    </div>
+    <div class="flex-stretch discount-title">
+            <h1>HOO<br /><span>DIES</span></h1>
+        </div>
+    <div class="flex-none discount-img"></div>
+</div>
+
+
 <!-- *** ABOUT COMPANY *** -->
 <section class="gray-bg">
     <div class="container about-us">
@@ -114,7 +127,7 @@
 
 <!-- *** NEWSLETTER *** -->
 <div class="news-row display-flex flex-align-center">
-    <div class="flex-stretch news-img"></div>
+    <div class="flex-none news-img"></div>
     <div class="flex-stretch news-text">
         <h3>Want the Latest Updates?</h3>
         <p>Subscribe to our monthly newsletter so you can hear about the latest in AWesome trends.</p>
