--- a/aaron.washington/index.html
+++ b/aaron.washington/index.html
@@ -29,7 +29,7 @@
     <div class="flex-stretch"></div>
     <nav class="flex-none nav">
         <ul class="display-flex">
-            <li><a href="#">Featured</a></li>
+            <li><a href="#">What&apos;s New</a></li>
             <li><a href="#">Products</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Login</a></li>
@@ -41,9 +41,9 @@
 <div class="hero hero-landing display-flex flex-align-center">
     <div class="container flex-stretch">
         <div class="hero-text">
-            <h2>IT&apos;S HERE</h2>
-            <h4>Fall 2021 Collection</h4>
-            <p>Check out this season&apos;s featured designs.</p>
+            <h2>FALL 2021 COLLECTION</h2>
+            <h4>It&apos;s Finally Here</h4>
+            <!--<p>Check out this season&apos;s featured designs.</p>-->
             <button class="light">Shop Now</button>
         </div>
         <div class="flex-stretch"></div>
@@ -88,6 +88,7 @@
     <div class="flex-stretch discount-offer">
         <h5>This Month Only</h5>
         <h1>25&percnt;<br />OFF</h1>
+        <h5 class="promo">Promo Code&colon; HOOD23</h5>
     </div>
     <div class="flex-stretch discount-title">
             <h1>HOO<br /><span>DIES</span></h1>
@@ -127,15 +128,23 @@
 <div class="news-row display-flex flex-align-center">
     <div class="flex-none news-img"></div>
     <div class="flex-stretch news-text">
-        <h3>Want the Latest Updates?</h3>
-        <p>Subscribe to our monthly newsletter so you can hear about the latest in AWesome trends.</p>
+        <h3>Looking for the Latest Trends?</h3>
+        <p>Subscribe to our monthly newsletter so you can stay up to date on new AWesome stuff.</p>
         <button class="light">Keep Me Posted!</button>
     </div>
 </div>
 
 
-<footer>
-
+<footer class="display-flex flex-align-center">
+    <nav class="flex-none nav">
+        <ul class="display-flex">
+            <li><a href="#">What&apos;s New</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Our Company</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Contact Us</a></li>
+        </ul>
+    </nav>
 </footer>
 
 </body>
