--- a/aaron.washington/index.html
+++ b/aaron.washington/index.html
@@ -136,14 +136,15 @@
 
 
 <footer class="display-flex flex-align-center">
-    <nav class="flex-none nav">
-        <ul class="display-flex">
-            <li><a href="#">What&apos;s New</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Our Company</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Contact Us</a></li>
+    <nav class="flex-stretch nav">
+        <ul class="display-flex flex-align-center">
+            <li class="flex-stretch flex-basis-none"><a href="#">What&apos;s New</a></li>
+            <li class="flex-stretch flex-basis-none"><a href="#">Products</a></li>
+            <li class="flex-stretch flex-basis-none"><a href="#">Our Company</a></li>
+            <li class="flex-stretch flex-basis-none"><a href="#">Careers</a></li>
+            <li class="flex-stretch flex-basis-none"><a href="#">Contact Us</a></li>
         </ul>
+        <p class="copyright">&copy; 2021 AWesome Stuff. All Rights Reserved.</p>
     </nav>
 </footer>
 
