--- a/aaron.washington/index.html
+++ b/aaron.washington/index.html
@@ -124,6 +124,20 @@
 </div>
 
 
+<!-- *** GRID PRACTICE *** -->
+<div class="container">
+    <div class="grid">
+        <div class="col-6">Column 6</div>
+        <div class="col-6">Column 6</div>
+    </div>
+    <div class="grid">
+        <div class="col-6">Column 6</div>
+        <div class="col-6">Column 6</div>
+    </div>
+</div>
+
+
+
 <!-- *** NEWSLETTER *** -->
 <div class="news-row display-flex flex-align-center">
     <div class="flex-none news-img"></div>
