--- a/aaron.washington/index.html
+++ b/aaron.washington/index.html
@@ -9,6 +9,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     </style> 
+    <link rel="stylesheet" href="lib/css/gridsystem.css">
     <link rel="stylesheet" href="lib/css/styleguide.css">
     <link rel="stylesheet" href="css/storetheme.css">
 </head>
@@ -131,8 +132,8 @@
         <div class="col-6">Column 6</div>
     </div>
     <div class="grid">
-        <div class="col-6">Column 6</div>
-        <div class="col-6">Column 6</div>
+        <div class="col-4">Column 4</div>
+        <div class="col-4">Column 4</div>
     </div>
 </div>
 
