--- a/aaron.washington/index.html
+++ b/aaron.washington/index.html
@@ -134,6 +134,7 @@
     <div class="grid">
         <div class="col-4">Column 4</div>
         <div class="col-4">Column 4</div>
+        <div class="col-4">Column 4</div>
     </div>
 </div>
 
