--- a/aaron.washington/index.html
+++ b/aaron.washington/index.html
@@ -128,13 +128,13 @@
 <!-- *** GRID PRACTICE *** -->
 <div class="container">
     <div class="grid">
-        <div class="col-6">Column 6</div>
-        <div class="col-6">Column 6</div>
+        <div class="col-xs-6">Column 6</div>
+        <div class="col-xs-6">Column 6</div>
     </div>
     <div class="grid">
-        <div class="col-4">Column 4</div>
-        <div class="col-4">Column 4</div>
-        <div class="col-4">Column 4</div>
+        <div class="col-xs-4">Column 4</div>
+        <div class="col-xs-4">Column 4</div>
+        <div class="col-xs-4">Column 4</div>
     </div>
 </div>
 
