--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -45,18 +45,28 @@
         <h2>Table of Contents</h2>
         <ul>
             <li><a href="#typography">Typography</a></li>
+            <ul>
+                <li><a href="#headings">Headings</a></li>
+                <li><a href="#paragraphs">Paragraphs</a></li>
+            </ul>
         </ul>
     </div>
 </div>
 
 <div class="container" id="typography">
-    <div class="card">
+    <div class="card" id="headings">
         <h3>Typography</h3>
         <h1>Heading 1</h1>
         <h2>Heading 2</h2>
         <h3>Heading 3</h3>
         <h4>Heading 4</h4>
         <h5>Heading 5</h5>
+    </div>
+    <div class="card" id="paragraphs">
+        <h3>Paragraphs</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia maxime recusandae laborum labore culpa accusantium debitis quod sapiente impedit eos, eius perferendis, obcaecati similique consequatur tenetur libero, adipisci illum voluptatem?</p>
+        <p>Molestiae dolore exercitationem, sint excepturi laboriosam enim dolorem animi esse similique tenetur, quibusdam repudiandae nobis qui iure consequatur sapiente architecto, doloribus magni repellat. Officia minus minima fuga, doloremque omnis maiores.</p>
+        <p>Ducimus nesciunt debitis illo, veniam unde quisquam, rerum saepe repudiandae aperiam eveniet tempora mollitia sed non accusantium accusamus doloribus quaerat molestias praesentium vero necessitatibus nihil minus blanditiis eius sint. Magnam!</p>
     </div>
 </div>
     
