--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -78,16 +78,36 @@
 <div class="container">
     <h3>Cards</h3>
     <div class="grid gap">
-        <div class="col-xs-12 col-md-3">
+        <div class="col-xs-12 col-md-4">
             <div class="card">Card Light</div>
         </div>
-        <div class="col-xs-12 col-md-3">
+        <div class="col-xs-12 col-md-4">
             <div class="card">Card Dark</div>
         </div>
-        <div class="col-xs-12 col-md-3">
-            <div class="card">Card Image</div>
+        <div class="col-xs-12 col-md-4">
+            <div class="card card-img">Card Image</div>
         </div>
     </div>
+</div>
+
+
+<div class="container">
+    <h3>View Window</h3>
+</div>
+
+
+<div class="container">
+    <h3>Navigations</h3>
+</div>
+
+
+<div class="container">
+    <h3>Grid System</h3>
+</div>
+
+
+<div class="container">
+    <h3>Flex System</h3>
 </div>
     
 
