--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -41,8 +41,8 @@
 
 <!-- ** Table of Contents ** -->
 <div class="container" id="tableofcontents">
-    <div class="card">
-        <h2>Table of Contents</h2>
+    <div class="display-block">
+        <h3>Table of Contents</h3>
         <ul>
             <li><a href="#typography">Typography</a></li>
             <ul>
@@ -61,13 +61,15 @@
 <div class="container" id="typography">
     <div class="card" id="headings">
         <h3>Typography</h3>
+    </div>
+    <div class="display-block">
         <h1>Heading 1</h1>
         <h2>Heading 2</h2>
         <h3>Heading 3</h3>
         <h4>Heading 4</h4>
         <h5>Heading 5</h5>
     </div>
-    <div class="card" id="paragraphs">
+    <div id="paragraphs">
         <h3>Paragraphs</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia maxime recusandae laborum labore culpa accusantium debitis quod sapiente impedit eos, eius perferendis, obcaecati similique consequatur tenetur libero, adipisci illum voluptatem?</p>
         <p>Molestiae dolore exercitationem, sint excepturi laboriosam enim dolorem animi esse similique tenetur, quibusdam repudiandae nobis qui iure consequatur sapiente architecto, doloribus magni repellat. Officia minus minima fuga, doloremque omnis maiores.</p>
@@ -76,16 +78,23 @@
 </div>
 
 <div class="container">
+    <hr>
+    <br />
     <h3>Cards</h3>
     <div class="grid gap">
         <div class="col-xs-12 col-md-4">
-            <div class="card">Card Light</div>
+            <div class="card-light"><h3>Card Light</h3>
+            </div>
         </div>
         <div class="col-xs-12 col-md-4">
-            <div class="card">Card Dark</div>
+            <div class="card-dark">
+                <h3>Card Dark</h3>
+            </div>
         </div>
         <div class="col-xs-12 col-md-4">
-            <div class="card card-img">Card Image</div>
+            <div class="card card-img card-bg-1">
+                <h3>Card Image</h3>
+            </div>
         </div>
     </div>
 </div>
