--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CSS Styleguide</title>
+    <title>CSS Styleguide &ndash; Aaron Washington</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -41,7 +41,7 @@
 
 <!-- ** Table of Contents ** -->
 <div class="container" id="tableofcontents">
-    <div class="display-block">
+    <div class="display-block card">
         <h3>Table of Contents</h3>
         <ul>
             <li><a href="#typography">Typography</a></li>
@@ -58,18 +58,21 @@
     </div>
 </div>
 
+<!-- ** Typography ** -->
 <div class="container" id="typography">
-    <div class="card" id="headings">
-        <h3>Typography</h3>
-    </div>
-    <div class="display-block">
+    <hr>
+    <h3 style="margin-left: 1rem;">TYPOGRAPHY</h3>
+    <hr>
+    <br />
+    <div class="display-block" id="headings">
         <h1>Heading 1</h1>
         <h2>Heading 2</h2>
         <h3>Heading 3</h3>
         <h4>Heading 4</h4>
         <h5>Heading 5</h5>
     </div>
-    <div id="paragraphs">
+    <br />
+    <div class="display-block" id="paragraphs">
         <h3>Paragraphs</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia maxime recusandae laborum labore culpa accusantium debitis quod sapiente impedit eos, eius perferendis, obcaecati similique consequatur tenetur libero, adipisci illum voluptatem?</p>
         <p>Molestiae dolore exercitationem, sint excepturi laboriosam enim dolorem animi esse similique tenetur, quibusdam repudiandae nobis qui iure consequatur sapiente architecto, doloribus magni repellat. Officia minus minima fuga, doloremque omnis maiores.</p>
@@ -77,10 +80,12 @@
     </div>
 </div>
 
-<div class="container">
+<!-- ** Cards ** -->
+<div class="container" id="cards">
+    <hr>
+    <h3 style="margin-left: 1rem;">CARDS</h3>
     <hr>
     <br />
-    <h3>Cards</h3>
     <div class="grid gap">
         <div class="col-xs-12 col-md-4">
             <div class="card-light"><h3>Card Light</h3>
@@ -100,23 +105,35 @@
 </div>
 
 
-<div class="container">
-    <h3>View Window</h3>
+<div class="container" id="viewwindow">
+    <hr>
+    <h3 style="margin-left: 1rem;">VIEW WINDOW</h3>
+    <hr>
+    <br />
 </div>
 
 
-<div class="container">
-    <h3>Navigations</h3>
+<div class="container" id="navigation">
+    <hr>
+    <h3 style="margin-left: 1rem;">NAVIGATION</h3>
+    <hr>
+    <br />
 </div>
 
 
-<div class="container">
-    <h3>Grid System</h3>
+<div class="container" id="gridsystem">
+    <hr>
+    <h3 style="margin-left: 1rem;">GRID SYSTEM</h3>
+    <hr>
+    <br />
 </div>
 
 
-<div class="container">
-    <h3>Flex System</h3>
+<div class="container" id="flexsystem">
+    <hr>
+    <h3 style="margin-left: 1rem;">FLEX SYSTEM</h3>
+    <hr>
+    <br />
 </div>
     
 
