--- a/aaron.washington/styleguide/index.html
+++ b/aaron.washington/styleguide/index.html
@@ -49,6 +49,7 @@
                 <li><a href="#headings">Headings</a></li>
                 <li><a href="#paragraphs">Paragraphs</a></li>
             </ul>
+            <li><a href="#colors">Color Palette</a></li>
             <li><a href="#cards">Cards</a></li>
             <li><a href="#viewwindow">View Window</a></li>
             <li><a href="#navigation">Navigation</a></li>
@@ -80,6 +81,31 @@
     </div>
 </div>
 
+<!-- ** Colors ** -->
+<div class="container" id="colors">
+    <hr>
+    <h3 style="margin-left: 1rem;">COLOR PALETTE</h3>
+    <hr>
+    <br />
+    <div class="grid gap">
+        <div class="col-xs-12 col-md-4">
+            <div class="card primlight">
+                <h4>Primary Light<br />&num;FFF</h4>
+            </div>
+        </div>
+        <div class="col-xs-12 col-md-4">
+            <div class="card acclight">
+                <h4>Accent Light<br />&num;EA3D3D</h4>
+            </div>
+        </div>
+        <div class="col-xs-12 col-md-4">
+            <div class="card neutlight">
+                <h4>Neutral Light<br />&num;A5AABA</h4>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- ** Cards ** -->
 <div class="container" id="cards">
     <hr>
@@ -88,17 +114,18 @@
     <br />
     <div class="grid gap">
         <div class="col-xs-12 col-md-4">
-            <div class="card-light"><h3>Card Light</h3>
+            <div class="card-light">
+                <h4>Card Light</h4>
             </div>
         </div>
         <div class="col-xs-12 col-md-4">
             <div class="card-dark">
-                <h3>Card Dark</h3>
+                <h4>Card Dark</h4>
             </div>
         </div>
         <div class="col-xs-12 col-md-4">
             <div class="card card-img card-bg-1">
-                <h3>Card Image</h3>
+                <h4>Card Image</h4>
             </div>
         </div>
     </div>
